--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   fluttertoast: ^8.2.1
   font_awesome_flutter: ^10.4.0
   google_sign_in: ^6.1.0
+  image_picker: ^0.8.7+5
   intl: ^0.18.0
   provider: ^6.0.5
 
